limit the scope of sliding window index to only work with vector indexes.